# ML4CO-Kit

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LKH-3.0.7.tgz6jzle0xx.tmp  Oe8af611ea.res  README.md  SAT_Implementation_Work_Summary.md  SAT_Solver_Research_Background.md  codecov.yml  draft.py  e8af611ea.res  generate_sat_test_data.py  quick_sat_test.py  remote_sat_implementation_guide.md  sat_generator_implementation_guide.md  setup.py  temp_instance_38.txt  test_sat_generator.py  test_sat_solvers.py  test_sat_solvers_opensource.py  test_sat_task.py  tmp.py
 acknowledgements/concorde/: acknowledgements.md  issue.md
 acknowledgements/fem/: issue.md
 acknowledgements/ga_eax/: acknowledgements.md
 acknowledgements/hgs/: issue.md
 acknowledgements/kamis/: issue.md
 acknowledgements/lkh/: LICENSE  issue.md
 acknowledgements/neurolkh/: acknowledgements.md  issue.md
 acknowledgements/pyvrp/: acknowledgements.md
 acknowledgements/rlsa/: acknowledgements.md
.github/workflows/: dreamplace-prebuilt.yml  python-package.yml  python-publish.yml
acknowledgements/concorde/: COPYING  issue.md
acknowledgements/fem/: acknowledgements.md  issue.md
acknowledgements/ga_eax/: issue.md
acknowledgements/hgs/: acknowledgements.md
data4co/: __init__.py  mis_data.py  tsp_data.py
docs/: conf.py  example.rst  index.rst  prl_vrp_base_utils.md  pyvrp_solver_notes.md  requirements.txt
examples/: README.rst
ml4co_kit/: __init__.py
ml4co_kit/extension/dreamplace/source/: CMakeLists.txt
ml4co_kit/extension/dreamplace/source/cmake/: FilesystemLibrary.cmake
ml4co_kit/extension/dreamplace/source/dreamplace/: BasicPlace.py  EvalMetrics.py  NesterovAcceleratedGradientOptimizer.py  NonLinearPlace.py  Params.py  PlaceDB.py  PlaceObj.py  Placer.py  Timer.py  __init__.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/: CMakeLists.txt
ml4co_kit/extension/dreamplace/source/dreamplace/ops/abacus_legalize/: abacus_legalize.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/adjust_node_area/: adjust_node_area.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/dct/: __init__.py  dct.py  dct2_fft2.py  dct_lee.py  discrete_spectral_transform.py  naive.py  torch_fft_api.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/density_map/: density_map.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/density_overflow/: density_overflow.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/density_potential/: density_potential.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/draw_place/: PlaceDrawer.py  draw_place.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/electric_potential/: electric_overflow.py  electric_potential.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/fence_region/: fence_region.py  figures.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/gift_init/: gift_init.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/gift_init/utils_gpu/: mix_frequency_filter.py  util.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/global_swap/: __init__.py  global_swap.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/global_swap/src/: global_swap_concurrent.cpp
ml4co_kit/extension/dreamplace/source/dreamplace/ops/greedy_legalize/: greedy_legalize.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/hpwl/: hpwl.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/independent_set_matching/: independent_set_matching.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/independent_set_matching/src/: auction_cpu.h  partition_independent_sets_cuda2cpu.cuh
ml4co_kit/extension/dreamplace/source/dreamplace/ops/k_reorder/: k_reorder.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/legality_check/: legality_check.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/logsumexp_wirelength/: __init__.py  logsumexp_wirelength.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/macro_legalize/: macro_legalize.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/move_boundary/: move_boundary.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/nctugr_binary/: nctugr_binary.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/pin_pos/: __init__.py  pin_pos.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/pin_pos/src/: pin_pos.cpp  pin_pos_cuda.cpp  pin_pos_cuda_kernel.cu  pin_pos_cuda_segment.cpp  pin_pos_cuda_segment_kernel.cu
ml4co_kit/extension/dreamplace/source/dreamplace/ops/pin_utilization/: pin_utilization.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/pin_weight_sum/: pin_weight_sum.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/pinrudy/: __init__.py  pinrudy.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/place_io/: __init__.py  place_io.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/place_io/src/: Interval.h
ml4co_kit/extension/dreamplace/source/dreamplace/ops/rmst_wl/: rmst_wl.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/rudy/: __init__.py  rudy.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/timing/: CMakeLists.txt  timing.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/timing/src/: timing_cpp.cpp
ml4co_kit/extension/dreamplace/source/dreamplace/ops/timing_heterosta/: CMakeLists.txt  timing_hs.py
ml4co_kit/extension/dreamplace/source/dreamplace/ops/utility/src/: limits.h  torch.h
ml4co_kit/extension/dreamplace/source/dreamplace/ops/weighted_average_wirelength/: weighted_average_wirelength.py
publish/: compile_solvers.py  requirements.txt
scripts/: dreamplace_prebuild.py
tests/: compile_solvers.py  install_env.py  install_torch_env.py  mis_test.pickle  requirements.txt  test_algorithm.py  test_cvrp_prl_utils.py  test_data.py  test_data4co.py  test_data_evaluate.py  test_dataset.py  test_draw.py  test_evaluate.py  test_extension.py  test_generator.py  test_invariant_auction_cpu.py  test_mcmc.py  test_pyvrp_solver.py  test_solver.py  test_solver_optimizer.py  test_task.py  test_utils.py  test_wrapper.py  tsp1000_test.txt  tsp50_small_test.txt
(+1511 files in other folders)
